--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -30,9 +30,6 @@
         android:src="@drawable/lightcircle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="239dp"
@@ -86,17 +83,20 @@
             app:layout_constraintLeft_toRightOf="@id/countrycode"
             app:layout_constraintTop_toTopOf="parent"
             />
+
         <Button
-            android:id="@+id/button"
+            android:id="@+id/sendotpbutton"
             android:layout_width="110dp"
             android:layout_height="0dp"
-            android:layout_marginLeft="20dp"
             android:layout_marginTop="3dp"
             android:background="@drawable/sign_up_button"
+            android:onClick="sendOtp"
             android:text="Send OTP"
             android:textAllCaps="false"
             android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@id/userNumber"
+            app:layout_constraintStart_toEndOf="@+id/userNumber"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
