--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -61,7 +61,7 @@
             android:layout_height="0dp"
             android:background="@null"
             android:text="@string/_91"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:textColor="@color/colorAccent"
             android:textSize="25dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -89,7 +89,7 @@
             android:layout_width="110dp"
             android:layout_height="0dp"
             android:layout_marginTop="3dp"
-            android:background="@drawable/sign_up_button"
+            android:background="@drawable/sign_up_button_notactive"
             android:onClick="sendOtp"
             android:text="Send OTP"
             android:textAllCaps="false"
