--- a/app/src/main/res/layout/activity_otp_page.xml
+++ b/app/src/main/res/layout/activity_otp_page.xml
@@ -58,108 +58,81 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
-        android:id="@+id/otp1"
-        android:layout_width="40dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/login_bottomline"
-        android:ems="10"
-        android:inputType="number"
-        android:maxLength="1"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.852"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-    <EditText
-        android:id="@+id/otp2"
-        android:layout_width="40dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="100dp"
-        android:background="@drawable/login_bottomline"
-        android:ems="10"
-        android:inputType="number"
-        android:maxLength="1"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <com.chaos.view.PinView
+        android:id="@+id/otpinput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:cursorVisible="true"
+        android:itemBackground="#ffffff"
+        app:hideLineWhenFilled="true"
+        app:itemCount="6"
+        app:itemHeight="50dp"
+        app:itemRadius="5dp"
+        app:itemWidth="50dp"
+        app:cursorColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/no_otp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.151"
-        app:layout_constraintLeft_toRightOf="@id/otp1"
-        app:layout_constraintStart_toEndOf="@+id/otp1"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.003" />
+        app:layout_constraintVertical_bias="0.1"
+        app:lineColor="@color/colorAccent"
+        style="@style/PinWidget.PinView"/>
 
-    <EditText
-        android:id="@+id/otp3"
-        android:layout_width="40dp"
-        android:layout_height="45dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="19dp"
-        android:background="@drawable/login_bottomline"
-        android:ems="10"
-        android:inputType="number"
-        android:maxLength="1"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/otp2"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.003" />
+    <Button
+        android:id="@+id/verify"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Verify"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/otpinput"
+        android:background="@drawable/sign_up_button"
+        android:textSize="15dp"
+        android:onClick="verifyOtp"
+        />
 
-    <EditText
-        android:id="@+id/otp4"
-        android:layout_width="40dp"
-        android:layout_height="45dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="19dp"
-        android:background="@drawable/login_bottomline"
-        android:ems="10"
-        android:inputType="number"
-        android:maxLength="1"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold"
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/otp3"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.003" />
+        app:layout_constraintEnd_toStartOf="@+id/verify"
+        app:layout_constraintHorizontal_bias="0.716"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/otpinput"
+        app:layout_constraintVertical_bias="0.063" />
 
     <TextView
         android:id="@+id/no_otp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="86dp"
+        android:layout_marginTop="15dp"
         android:gravity="center"
         android:text="Didn't get OTP?"
         android:textColor="@color/secondary"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/resend"
-        app:layout_constraintHorizontal_bias="0.849"
+        app:layout_constraintHorizontal_bias="1.2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@id/verify"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/resend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="86dp"
-        android:layout_marginEnd="124dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="136dp"
         android:text="RESEND"
         android:textColor="@color/colorAccent"
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.002" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/verify"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
