--- a/app/src/main/res/layout/activity_otp_page.xml
+++ b/app/src/main/res/layout/activity_otp_page.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".otp_page">
-
+    tools:context=".otp_page"
+    android:orientation="vertical">
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="167dp"
