--- a/app/src/main/res/layout/layout_pg_location.xml
+++ b/app/src/main/res/layout/layout_pg_location.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Location of pg :"
+        android:text="@string/layout_pg_location_location"
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
