--- a/app/src/main/res/layout/layout_pg_reviews.xml
+++ b/app/src/main/res/layout/layout_pg_reviews.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:text="Reviews :"
+        android:text="@string/layout_pg_reviews_reviews"
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -55,7 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="yashwant tejwani"
+                    android:text="@string/layout_pg_review_data_name"
                     android:textColor="#000000"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView4"
@@ -80,7 +80,8 @@
                     android:layout_marginTop="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:srcCompat="@tools:sample/avatars"
+                    tools:ignore="ContentDescription" />
 
                 <TextView
                     android:id="@+id/textView11"
@@ -89,7 +90,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
-                    android:text="<this is filler text> saw this property , nice place to live the enviorment is peacful tu study.\nI strongly recomend this pg"
+                    android:text="@string/layout_pg_review_data_filler_text"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/textView10"
