--- a/app/src/main/res/layout/layout_pg_pictures.xml
+++ b/app/src/main/res/layout/layout_pg_pictures.xml
@@ -108,9 +108,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="50dp"
         android:text="@string/layout_pg_pictures_utilities"
         android:textColor="#000000"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
