--- a/app/src/main/res/drawable/toolbar_message_selector.xml
+++ b/app/src/main/res/drawable/toolbar_message_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/toolbar_message"/>
+    <item android:drawable="@drawable/ic_icons8_sms"/>
     <item android:drawable="@drawable/toolbar_message_selected" android:state_checked="true"/>
 </selector>
