--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -4,25 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="200dp"
     android:layout_height="200dp"
-    app:cardCornerRadius="5dp">
+    app:cardCornerRadius="5dp"
+    android:elevation="5dp"
+    android:background="#dcdcdc"
+    android:layout_marginRight="20dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginBottom="10dp">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="190dp"
+        android:layout_height="190dp"
+        android:background="#FFFFFF"
+        android:layout_gravity="center">
 
-        android:background="#FFFFFF">
-
-        <ImageButton
-            android:id="@+id/imageButton"
+        <ImageView
+            android:id="@+id/hostel_image"
             android:layout_marginTop="5dp"
-            android:layout_width="190dp"
-            android:layout_height="135dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:elevation="100dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/backgrounds/scenic"
-            android:contentDescription="@string/card_view_image_contentDescription" />
-
+            android:contentDescription="@string/card_view_image_contentDescription"
+            android:scaleType="fitCenter"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintHeight_percent=".6"
+            android:src="@drawable/demo_hostel"/>
 
         <ImageView
             android:id="@+id/img1"
@@ -30,52 +38,65 @@
             android:layout_height="2dp"
             android:src="@drawable/dotted_line"
             android:layout_marginTop="5dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton"
+            app:layout_constraintTop_toBottomOf="@+id/hostel_image"
             tools:ignore="ContentDescription" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/hostel_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:text="@string/card_view_name_of_pg"
             android:layout_marginStart="5dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="	#000000"
-            app:layout_constraintTop_toBottomOf="@+id/img1" />
-
+            app:layout_constraintTop_toBottomOf="@+id/img1"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent=".1"/>
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/hostel_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/card_view_area_of_pg"
             android:layout_marginStart="5dp"
             android:textColor="#FFD700"
-            android:textSize="10sp"
+            android:textSize="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            tools:ignore="SmallSp" />
+            app:layout_constraintTop_toBottomOf="@+id/hostel_name"
+            tools:ignore="SmallSp"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent=".05"/>
 
 
         <RatingBar
+            android:id="@+id/hostel_rating"
             style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:background="#00000000"
             android:progressBackgroundTint="#5C5959"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/hostel_address"
             android:progressTint="#FFD700"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="5dp"
-            android:rating="2.5" />
+            android:rating="0"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent=".1"/>
 
         <com.like.LikeButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/hostel_like"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp" />
+            android:layout_marginBottom="20dp"
+            app:flow_verticalGap="5dp"
+            app:flow_horizontalGap="5dp"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent=".15"
+            app:layout_constraintHeight_percent=".15"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
