--- a/app/src/main/res/layout/toolbar_heart.xml
+++ b/app/src/main/res/layout/toolbar_heart.xml
@@ -7,6 +7,6 @@
         android:layout_width="@dimen/menu_item_icon_size"
         android:layout_height="@dimen/menu_item_icon_size"
         android:layout_gravity="center"
-        android:src="@drawable/toolbar_heart_selector"
+        android:src="@drawable/toolbar_heart"
         />
 </FrameLayout>
