--- a/app/src/main/res/drawable-mdpi/selected_dot.xml
+++ b/app/src/main/res/drawable-mdpi/selected_dot.xml
@@ -6,6 +6,6 @@
             android:shape="ring"
             android:thickness="5dp"
             android:useLevel="false">
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="@color/black"/>
         </shape>
     </item></layer-list>
