--- a/app/src/main/res/layout/layout_pg_description.xml
+++ b/app/src/main/res/layout/layout_pg_description.xml
@@ -8,13 +8,14 @@
 
     <TextView
         android:id="@+id/textView9"
+        android:elevation="6dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:text="@string/layout_pg_description_description"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -50,7 +51,8 @@
                 android:padding="15dp"
                 android:text="@string/layout_pg_description_filler_text"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                android:textSize="14sp" />
 
         </LinearLayout>
     </ScrollView>
