--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="gray">#808080</color>
     <color name="lightGray">#B5B5B5</color>
     <color name="silver">#C0C0C0</color>
+    <color name="pink">#FF69B4</color>
+    <color name="red">#FF0000</color>
 </resources>
