--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -28,7 +28,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent=".96" />
+        app:layout_constraintWidth_percent=".96"
+        android:enabled="false"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/homePageParentRecyclerView"
@@ -41,4 +42,11 @@
         app:layout_constraintTop_toBottomOf="@+id/search_input"
         app:layout_constraintVertical_bias="0.0" />
 
+    <ProgressBar
+        android:id="@+id/homepageProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
