--- a/app/src/main/res/layout/activity_pg_details.xml
+++ b/app/src/main/res/layout/activity_pg_details.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/colorPrimary"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <include
-        android:id="@+id/toolbar1"
+        android:id="@+id/toolbar_pgdetail"
         layout="@layout/toolbar" />
 
     <ScrollView
@@ -15,7 +15,7 @@
         app:layout_constraintBottom_toTopOf="@id/pgDetailsButtonLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar1">
+        app:layout_constraintTop_toBottomOf="@id/toolbar_pgdetail">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,37 +55,52 @@
         </LinearLayout>
     </ScrollView>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/pgDetailsButtonLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:layout_height="0dp"
+        android:background="#f6f6f6"
         android:elevation="3dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:background="@color/red"
-            android:elevation="3dp"
-            android:src="@drawable/heart_icon" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent=".075">
         <Button
-            android:layout_width="match_parent"
+            android:id="@+id/wishlist_button"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:background="@color/red"
+            android:background="@color/black"
+            android:elevation="3dp"
+            android:text="ADD TO WISHLIST"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent=".49"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="5dp"/>
+
+        <Button
+            android:id="@+id/book_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@color/black"
             android:elevation="3dp"
             android:text="BOOK"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-    </LinearLayout>
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent=".49"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="5dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
