--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -16,6 +16,8 @@
         <ImageView
             android:id="@+id/hostel_image"
             android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:elevation="100dp"
@@ -45,15 +47,15 @@
             android:text="@string/card_view_name_of_pg"
             android:layout_marginStart="5dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:textSize="16dp"
+            android:textSize="14dp"
             android:textColor="	#000000"
             app:layout_constraintTop_toBottomOf="@+id/img1"
             app:layout_constraintHeight_default="percent"
-            app:layout_constraintHeight_percent=".1"/>
+            app:layout_constraintHeight_percent=".11"/>
         <TextView
             android:id="@+id/hostel_address"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:text="@string/card_view_area_of_pg"
             android:layout_marginStart="5dp"
             android:textColor="#FFD700"
@@ -62,7 +64,7 @@
             app:layout_constraintTop_toBottomOf="@+id/hostel_name"
             tools:ignore="SmallSp"
             app:layout_constraintHeight_default="percent"
-            app:layout_constraintHeight_percent=".05"/>
+            app:layout_constraintHeight_percent=".08"/>
 
 
         <RatingBar
@@ -80,21 +82,32 @@
             app:layout_constraintHeight_default="percent"
             app:layout_constraintHeight_percent=".1"/>
 
-        <com.like.LikeButton
-            android:id="@+id/hostel_like"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/likebuttonholder"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
-            app:flow_verticalGap="5dp"
-            app:flow_horizontalGap="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             app:layout_constraintHeight_default="percent"
             app:layout_constraintWidth_default="percent"
             app:layout_constraintWidth_percent=".15"
-            app:layout_constraintHeight_percent=".15"/>
+            app:layout_constraintHeight_percent=".15"
+            >
 
+            <com.like.LikeButton
+                android:id="@+id/likeButton"
+                app:icon_type="heart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:anim_scale_factor="1"
+                app:icon_size="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
