--- a/app/src/main/res/layout/layout_pg_pictures.xml
+++ b/app/src/main/res/layout/layout_pg_pictures.xml
@@ -35,7 +35,7 @@
         app:tabIndicatorGravity="center" />
 
     <TextView
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/name_pgdetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="3dp"
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/viewPager22" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/area_pgdetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -57,20 +57,20 @@
         android:elevation="3dp"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintTop_toBottomOf="@+id/name_pgdetails" />
 
     <RatingBar
-        android:id="@+id/ratingBar"
+        android:id="@+id/ratingBar_pgdetails"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:elevation="3dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/area_pgdetails" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/rent_pgdetails"
         android:layout_width="wrap_content"
         android:elevation="3dp"
         android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/viewPager22" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/price_pgdetails"
         android:elevation="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -91,9 +91,9 @@
         android:text="@string/layout_pg_pictures_rent"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView6"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintEnd_toEndOf="@+id/rent_pgdetails"
+        app:layout_constraintStart_toStartOf="@+id/rent_pgdetails"
+        app:layout_constraintTop_toBottomOf="@+id/rent_pgdetails" />
 
     <TextView
         android:id="@+id/editTextTextPersonName3"
@@ -107,7 +107,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+        app:layout_constraintTop_toBottomOf="@+id/ratingBar_pgdetails" />
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
@@ -122,22 +122,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3">
-
         <LinearLayout
             android:id="@+id/pgPicturesUtilitiesLayout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal">
-            <ImageView
-                android:padding="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/bed"/>
-            <ImageView
-                android:padding="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/bed"/>
             <ImageView
                 android:padding="5dp"
                 android:layout_width="match_parent"
