--- a/app/src/main/res/drawable/ic_envelope_alt.xml
+++ b/app/src/main/res/drawable/ic_envelope_alt.xml
@@ -1,20 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
+    android:width="16dp"
+    android:height="16dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
       android:pathData="M2,5h20v14h-20z"
       android:strokeLineJoin="miter"
-      android:strokeWidth="1.2"
+      android:strokeWidth="3"
       android:fillColor="#00000000"
-      android:strokeColor="#03DAC5"
+      android:strokeColor="#4E6E6B"
       android:strokeLineCap="square"/>
   <path
       android:pathData="M2,5l10,9 10,-9"
       android:strokeLineJoin="miter"
-      android:strokeWidth="1.2"
+      android:strokeWidth="3"
       android:fillColor="#00000000"
-      android:strokeColor="#03DAC5"
+      android:strokeColor="#4E6E6B"
       android:strokeLineCap="round"/>
 </vector>
