--- a/app/src/main/res/drawable/ic_exit.xml
+++ b/app/src/main/res/drawable/ic_exit.xml
@@ -8,27 +8,27 @@
       android:strokeLineJoin="miter"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#03DAC5"
+      android:strokeColor="#1D3857"
       android:strokeLineCap="square"/>
   <path
       android:pathData="M11.5,12H20"
       android:strokeLineJoin="miter"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#03DAC5"
+      android:strokeColor="#000000"
       android:strokeLineCap="square"/>
   <path
       android:pathData="M21,12h-1"
       android:strokeLineJoin="miter"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#03DAC5"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M15,4v16H4V4z"
       android:strokeLineJoin="miter"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#03DAC5"
+      android:strokeColor="#000000"
       android:strokeLineCap="square"/>
 </vector>
